Remove command to build the SDK, as it is incomplete and doesn't work anymore. Cleaned up paths to remove redirects, to make them easier to read and check.